# neptune-tv

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  README.md  components.json  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
src/: App.tsx  main.css  main.tsx  vitest.setup.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor.rs  error.rs  events.rs  external_player.rs  lib.rs  main.rs  state.rs  types.rs  validation.rs
src-tauri/src/db/: channels.rs  groups.rs  migrations.rs  mod.rs  playlist.rs  pool.rs  search.rs
src-tauri/src/external_player/: mod.rs  vlc_launch.rs
src-tauri/src/importer/: local.rs  mod.rs  pipeline.rs  remote.rs
src-tauri/src/parser/: extinf.rs  mod.rs  types.rs
src/components/: AppShell.tsx  EmptyState.tsx  Header.tsx  LocaleSync.tsx  ResponsiveSidebarSheet.tsx  SectionHeader.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeSync.tsx
src/hooks/: useFocusedItem.ts  useImageFallback.ts  useImportLifecycle.ts  useIsMobile.ts  useKeyboardShortcuts.ts  useNotifications.ts  usePlaybackVlcFallbackToast.ts  useSearchInputRef.ts  useToastBridge.ts  useVirtualGrid.ts  useWindowTitle.ts
src/i18n/: i18next.d.ts  index.ts
src/lib/: adapter.ts  cursorCodec.ts  errorReportingAdapter.ts  ipcErrorReporter.ts  mockAdapter.ts  mockFixtures.ts  neptuneAdapter.ts  tauriAdapter.ts  toast.ts  types.ts  utils.ts  validatingAdapter.ts
src/pages/: BlockedPage.tsx  BrowserPage.tsx  HeroPage.tsx
src/store/: browseLifecycle.ts  index.ts  (+9 more)
(+66 files in other folders)
